--- a/views/date.erb
+++ b/views/date.erb
@@ -1,5 +1,5 @@
-<% @date = Date.new(2019) %>
+<% @date = Date.new(2019,4,6) %>
 
 <h1>Today</h1>
 
-<p>The date is <%=@date %></p>
+<p>The date is <%=@date.parse %></p>
