--- a/views/date.erb
+++ b/views/date.erb
@@ -1,6 +1,6 @@
 <% @date = Date.new('2019,4,6') %>
 <% d = DateTime.parse(@date) %>
-<% @new = d.strftime('Saturday April 4, 2019') %>
+<% @new = ('Saturday April 4, 2019') %>
 
 <h1>Today</h1>
 
