--- a/views/date.erb
+++ b/views/date.erb
@@ -1,7 +1,6 @@
-<% @date = Date.new('2019,4,6') %>
-<% d = DateTime.parse(@date) %>
-<% @new = ('Saturday April 4, 2019') %>
+
+<% @date = ('Saturday April 4, 2019') %>
 
 <h1>Today</h1>
 
-<p>The date is <%=@new %></p>
+<p>The date is <%=@date %></p>
